# HW_lab04

./: README.md  file1
.github/workflows/: ci.yml
formatter_ex_lib/: CMakeLists.txt
solver_application/: CMakeLists.txt
